[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Options.gd" type="Script" id=1]
[ext_resource path="res://Texture/logo.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen/Buttons/Back_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Texture/2.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Magnificent.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fades/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Options" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
dropdown_path = "Menu/CenterRow/Buttons/DropDown"
checkbox_path = "Menu/CenterRow/Buttons/CheckBox"
hslider_path = "Menu/CenterRow/Buttons/HSlider"

[node name="Menu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Margin" ]

[node name="Logo" type="TextureRect" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1720.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 1720.0
margin_bottom = 554.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Resolution"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DropDown" type="OptionButton" parent="Menu/CenterRow/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 360.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
_sections_unfolded = [ "Margin" ]

[node name="Label2" type="Label" parent="Menu/CenterRow/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 360.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="Menu/CenterRow/Buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 360.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Fullscreen"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckBox" type="CheckBox" parent="Menu/CenterRow/Buttons" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 142.0
margin_right = 360.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Label4" type="Label" parent="Menu/CenterRow/Buttons" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 186.0
margin_right = 360.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label5" type="Label" parent="Menu/CenterRow/Buttons" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 360.0
margin_bottom = 234.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Volume"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSlider" type="HSlider" parent="Menu/CenterRow/Buttons" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 254.0
margin_right = 360.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Margin" ]

[node name="BackButton" parent="Menu/CenterRow/Buttons" index="8" instance=ExtResource( 3 )]

margin_top = 290.0
margin_right = 360.0
margin_bottom = 350.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 364.0
margin_right = 1720.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Image" type="TextureRect" parent="Menu/CenterRow/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 675.0
margin_top = 172.0
margin_right = 680.0
margin_bottom = 177.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="VersionLabel" type="Label" parent="Menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 829.0
margin_right = 1720.0
margin_bottom = 880.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 1 )
text = "Version 0.1
Vapo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_fonts" ]

[node name="FadeIn" parent="." index="1" instance=ExtResource( 6 )]

visible = false

[connection signal="toggled" from="Menu/CenterRow/Buttons/CheckBox" to="." method="_on_CheckBox_toggled"]


